--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-01/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-01/style.css
@@ -1,4 +1,6 @@
-body {
+/* antigo exercício */
+
+/* body {
     font-size: 16px;
   }
   p {
@@ -32,3 +34,4 @@ body {
   li {
     font-weight: bold;
   }
+ */
